# noise-suppression-for-voice

./: .gitmodules  CMakeLists.txt
src/common/src/: RnNoiseCommonPlugin.cpp
src/ladspa_plugin/: CMakeLists.txt
src/rnnoise/: CMakeLists.txt
